# PixShark-V2

./: .gitignore  CMakeLists.txt  LICENSE  PixShark.ioc  README.md  STM32H743VGTX_FLASH.ld  STM32H743VGTX_RAM.ld  openocd.cfg
Core/Inc/: FreeRTOSConfig.h  i2c.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h  usart.h
Core/Src/: adc.c  dac.c  dma.c  fdcan.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  tim.c  usart.c
LWIP/App/: lwip.c
Robot/: RobotConfig.h  altimeter_task.cpp  altimeter_task.hpp  cabin_info_task.cpp  cabin_info_task.hpp  can_test.cpp  can_test.hpp  crawler_task.cpp  crawler_task.hpp  dac_test.cpp  dac_test.hpp  imu_task.cpp  imu_task.hpp  led_task.cpp  led_task.hpp  param_task.cpp  param_task.hpp  pwm_test.cpp  pwm_test.hpp  servo_task.cpp  servo_task.hpp  subscription_task.cpp  subscription_task.hpp  thruster_task.cpp  thruster_task.hpp
UserApp/: common_inc.h  main.cpp
components/: common.cpp  common.hpp
components/algorithm/: user_lib.c  user_lib.h
components/controller/: pid.c  pid.h
components/devices/altimeter/: altimeter.cpp  altimeter.hpp
components/devices/crawler/: crawler.cpp  crawler.hpp
components/devices/depth/: depth.cpp  depth.hpp
components/devices/gps/: gps.cpp  gps.hpp
components/devices/imu/: imu.cpp  imu.hpp
components/devices/led/: led.cpp  led.hpp
components/devices/servo/: servo.cpp  servo.hpp
components/devices/sht31/: sht31.cpp  sht31.hpp
components/devices/thruster/: thruster.cpp  thruster.hpp
components/hardware/adc/: adc.cpp  adc.hpp
components/hardware/can/: can.cpp  can.hpp
components/hardware/dac/: dac.cpp  dac.hpp
components/hardware/i2c/: i2c.cpp  i2c.hpp
components/hardware/pwm/: pwm.cpp  pwm.hpp
components/hardware/serial/: serial.cpp  serial.hpp
components/hardware/spi/: spi.cpp  spi.hpp
components/hardware/timer/: timer.cpp  timer.hpp
components/support/crc/: CRC8_CRC16.c  CRC8_CRC16.h
components/support/fifo/: fifo.cpp  fifo.hpp
components/support/json/: CJsonObject.cpp  cJSON.c  cJSON.h
components/support/mqtt/: mqtt_client.cpp  mqtt_client.hpp
components/support/udp/: udp_client.cpp  udp_client.hpp
micro_ros/include/rmw_microxrcedds_c/: config.h
micro_ros/include/underwater_robot_msgs/msg/: altimeter.h  cabin_info.h  gps.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  rosidl_typesupport_microxrcedds_c__visibility_control.h
micro_ros/include/underwater_robot_msgs/msg/detail/: altimeter__functions.c  altimeter__functions.h  altimeter__rosidl_typesupport_introspection_c.h  altimeter__rosidl_typesupport_microxrcedds_c.h  altimeter__struct.h  altimeter__type_support.c  altimeter__type_support.h  cabin_info__functions.c  cabin_info__functions.h  cabin_info__rosidl_typesupport_introspection_c.h  cabin_info__rosidl_typesupport_microxrcedds_c.h  cabin_info__struct.h  cabin_info__type_support.c  cabin_info__type_support.h  gps__functions.c  gps__functions.h  gps__rosidl_typesupport_introspection_c.h  gps__rosidl_typesupport_microxrcedds_c.h  gps__struct.h  gps__type_support.c  gps__type_support.h
micro_ros/include/uxr/client/: config.h
